<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".LoginActivity">

    <!-- Cards Snowflakes -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jetradarmobile.snowfall.SnowfallView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:snowflakeAlphaMax="180"
            app:snowflakeAlphaMin="120"
            app:snowflakeAngleMax="5"
            app:snowflakeImage="@drawable/card1"
            app:snowflakeSizeMax="30dp"
            app:snowflakeSizeMin="15dp"
            app:snowflakeSpeedMax="8"
            app:snowflakeSpeedMin="4"
            app:snowflakesAlreadyFalling="true"
            app:snowflakesNum="4" />

        <com.jetradarmobile.snowfall.SnowfallView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:snowflakeAlphaMax="180"
            app:snowflakeAlphaMin="120"
            app:snowflakeAngleMax="5"
            app:snowflakeImage="@drawable/card2"
            app:snowflakeSizeMax="30dp"
            app:snowflakeSizeMin="15dp"
            app:snowflakeSpeedMax="8"
            app:snowflakeSpeedMin="4"
            app:snowflakesAlreadyFalling="true"
            app:snowflakesNum="4" />

        <com.jetradarmobile.snowfall.SnowfallView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:snowflakeAlphaMax="180"
            app:snowflakeAlphaMin="120"
            app:snowflakeAngleMax="5"
            app:snowflakeImage="@drawable/card3"
            app:snowflakeSizeMax="30dp"
            app:snowflakeSizeMin="15dp"
            app:snowflakeSpeedMax="8"
            app:snowflakeSpeedMin="4"
            app:snowflakesAlreadyFalling="true"
            app:snowflakesNum="4" />

        <com.jetradarmobile.snowfall.SnowfallView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:snowflakeAlphaMax="180"
            app:snowflakeAlphaMin="120"
            app:snowflakeAngleMax="5"
            app:snowflakeImage="@drawable/card4"
            app:snowflakeSizeMax="30dp"
            app:snowflakeSizeMin="15dp"
            app:snowflakeSpeedMax="8"
            app:snowflakeSpeedMin="4"
            app:snowflakesAlreadyFalling="true"
            app:snowflakesNum="4" />

        <com.jetradarmobile.snowfall.SnowfallView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:snowflakeAlphaMax="180"
            app:snowflakeAlphaMin="120"
            app:snowflakeAngleMax="5"
            app:snowflakeImage="@drawable/card5"
            app:snowflakeSizeMax="30dp"
            app:snowflakeSizeMin="15dp"
            app:snowflakeSpeedMax="8"
            app:snowflakeSpeedMin="4"
            app:snowflakesAlreadyFalling="true"
            app:snowflakesNum="4" />

        <com.jetradarmobile.snowfall.SnowfallView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:snowflakeAlphaMax="180"
            app:snowflakeAlphaMin="120"
            app:snowflakeAngleMax="5"
            app:snowflakeImage="@drawable/card6"
            app:snowflakeSizeMax="30dp"
            app:snowflakeSizeMin="15dp"
            app:snowflakeSpeedMax="8"
            app:snowflakeSpeedMin="4"
            app:snowflakesAlreadyFalling="true"
            app:snowflakesNum="4" />

    </RelativeLayout>
    <!-- Cards Snowflakes -->

    <ImageView
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_logo"
        android:padding="15dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email_white_24dp"
        android:drawablePadding="-30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_edit_text_bg"
        android:fontFamily="@font/jua_regular"
        android:gravity="center"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#b4000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock_closed_white_24dp"
        android:drawablePadding="-30dp"
        android:layout_marginBottom="225dp"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_edit_text_bg"
        android:fontFamily="@font/jua_regular"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#b4000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_et"
        app:layout_constraintVertical_bias="0.0" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="101dp"
        android:layout_marginEnd="117dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/jua_regular"
        android:onClick="LoginBtnClick"
        android:text="@string/login"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_et"
        app:initialCornerAngle="20dp"
        app:spinning_bar_color="#000"
        app:spinning_bar_padding="5dp"
        app:spinning_bar_width="3dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="111dp"
        android:layout_marginStart="111dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/no_user"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_create_new_user"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="118dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/jua_regular"
        android:text="@string/create_new_user"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="CreateNewUserBtnClick" />

</android.support.constraint.ConstraintLayout>